# stc89c52-demos

./: .gitattributes  .gitignore  NOTICE  README.md  meson.build
00_hello/: connections.fzz  hello.c
01_button_led_matrix/: button_led_matrix.c
01_button_segment/: button_segment.c
01_led_74H595/: led_74H595.c
01_led_button/: led_button.c
01_led_button_debounce/: led_button.c
01_led_button_hyst/: led_button.c
01_led_button_timer/: led_button.c
01_led_buzzer/: led_buzzer.c
01_led_matrix/: led_matrix.c
02_7_segment/: segment.c
02_7_segment_dyn/: segment.c
03_hd44780_lcd/: lcd.c
04_st7920_graph/: cindy.h  convert_to_bitmask.py  lcd.c
04_st7920_lcd/: lcd.c
05_enc_servo/: enc.c
06_DS18B20_1wire/: wire.c
07_at24c02_i2c/: i2c.c
08_irda/: irda.c
09_ethernet/: enc28j60.c  enc28j60.h  enc28j60_cfg.h  ethernet.c  xprintf.c  xprintf.h
